Made SignUp Api for user registeration